change header ment

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
         <div class="container">
             <div class="section-title">
                 <h2>투자자 네트워크</h2>
-                <p>SNUVC가 만나고 협력하는 투자 전문가들</p>
+                <p>SNUVC가 만나고 인사이트를 얻은 투자 전문가들</p>
             </div>
             
             <!-- Korea -->
@@ -599,12 +599,12 @@
                     <div class="investor-card">
                         <h4>한국투자증권</h4>
                         <p class="position">이사</p>
-                        <p class="description">한국 대표 금융기관의 벤처투자 전문가와의 협력</p>
+                        <p class="description">한국 대표 금융기관의 벤처투자 전문가와의 스터디 및 인사이트</p>
                     </div>
                     <div class="investor-card">
                         <h4>블루포인트파트너스</h4>
                         <p class="position">심사역</p>
-                        <p class="description">초기 스타트업 투자 전문 VC와의 협력</p>
+                        <p class="description">초기 스타트업 투자 전문 VC와의 스터디 및 인사이트</p>
                     </div>
                     <div class="investor-card investor-card-coming">
                         <h4>추후 공개 예정</h4>
