google sheet updated

--- a/index.html
+++ b/index.html
@@ -818,13 +818,13 @@
         <div class="container">
             <h4>SNUVC</h4>
             <p>SNU Venture Consulting</p>
-            <p class="copyright">© 2024 SNUVC. All rights reserved.</p>
+            <p class="copyright">© 2025 SNUVC. All rights reserved.</p>
         </div>
     </footer>
 
     <script>
         // Google Apps Script Web App URL
-        const SCRIPT_URL = 'YOUR_GOOGLE_SCRIPT_URL_HERE';
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbw4BEzaKLK_X7EQPPbxcUq6NLg8gWvbDmuIWPSyYxigDUQqsShswU8LjQqk7WvFPZiR/exec';
         
         // 부드러운 스크롤
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
