--- a/index.html
+++ b/index.html
@@ -617,6 +617,11 @@
                         <p class="position">심사역</p>
                         <p class="description">초기 스타트업 투자 전문 VC와의 스터디 및 인사이트</p>
                     </div>
+                    <div class="investor-card">
+                        <h4>서울대학교</h4>
+                        <p class="position">이영민 교수</p>
+                        <p class="description">서울대학교 교수님과의 스터디 및 인사이트</p>
+                    </div>
                     <div class="investor-card investor-card-coming">
                         <h4>추후 공개 예정</h4>
                         <p class="position">Coming Soon</p>
