--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
                     </div>
                     <div class="investor-card">
                         <h4>서울대학교</h4>
-                        <p class="position">이영민 교수</p>
+                        <p class="position">이영민 서울대학교 경영대학 교수</p>
                         <p class="description">서울대학교 교수님과의 스터디 및 인사이트</p>
                     </div>
                     <div class="investor-card investor-card-coming">
