--- a/index.html
+++ b/index.html
@@ -622,6 +622,11 @@
                         <p class="position">이영민 서울대학교 경영대학 교수</p>
                         <p class="description">서울대학교 교수님과의 스터디 및 인사이트</p>
                     </div>
+                    <div class="investor-card">
+                        <h4>Intervest</h4>
+                        <p class="position">수석심사역</p>
+                        <p class="description">Intervest 수석심사역과의 스터디 및 인사이트</p>
+                    </div>
                     <div class="investor-card investor-card-coming">
                         <h4>추후 공개 예정</h4>
                         <p class="position">Coming Soon</p>
